# quic-performance

./: .gitmodules  BUILD.md  LICENSE  README.md
config/: .env  config.json
config/certs/: certificate.pem  key.pem
containers/http-clients/: Dockerfile
containers/http-clients/src/: build.sh
containers/http-clients/src/http-asio/: CMakeLists.txt  main.cpp
containers/http-clients/src/http-curl/: CMakeLists.txt  main.cpp
containers/http-clients/src/http-okhttp/: build.gradle
containers/http-clients/src/http-okhttp/src/main/java/com/test/: HttpClient.java
containers/mvfst/: Dockerfile
containers/ngtcp2/: Dockerfile
containers/ookla-server/: Dockerfile  LICENSE  OoklaServer.properties  README.md  install_server.sh
containers/picoquic/: Dockerfile
performance/clients/http/asio/: docker-compose.yml  run_demo.py
performance/clients/http/curl/: docker-compose.yml  run_demo.py
performance/clients/http/okhttp/: docker-compose.yml  run_demo.py
performance/clients/quic/mvfst/: docker-compose.yml  run_demo.py
performance/clients/quic/ngtcp2/: docker-compose.yml  run_demo.py
performance/clients/quic/picoquic/: docker-compose.yml  run_demo.py
performance/servers/http/ookla/: docker-compose.yml
performance/servers/quic/mvfst/: docker-compose.yml
performance/servers/quic/ngtcp2/: docker-compose.yml
performance/servers/quic/picoquic/: docker-compose.yml
scripts/: setup.sh
